--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,9 +1073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(unique_travel_cities)"
    ]
@@ -1089,9 +1100,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Pyeongchang',\n",
+       " 'Salina Island',\n",
+       " 'Marakesh',\n",
+       " 'San Antonio',\n",
+       " 'Solta',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Toronto',\n",
+       " 'Los Cabos',\n",
+       " 'Albuquerque',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_travel_cities"
    ]
@@ -1105,9 +1139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(unique_travel_cities)"
    ]
